force-app/main/default/objects/Settlement_Fee__c/Settlement_Fee__c.object-meta.xml
<CustomObject>
    <label>Settlement Fee</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Settlement Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>