force-app/main/default/objects/Settlement_Fee__c/fields/Settlement_Plan_Item__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Plan_Item__c</fullName>
    <label>Settlement Plan Item</label>
    <referenceTo>Settlement_Plan_Item__c</referenceTo>
    <relationshipLabel>Settlement Fees</relationshipLabel>
    <relationshipName>Settlement_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>