force-app/main/default/objects/Settlement_Fee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Fee</fullName>
            </value>
            <value>
                <fullName>Commission Fee</fullName>
            </value>
            <value>
                <fullName>Settlement Fee</fullName>
            </value>
            <value>
                <fullName>SettlementPayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>